--- a/Web_Project/WebApp/static/style_register.css
+++ b/Web_Project/WebApp/static/style_register.css
@@ -28,7 +28,7 @@ center{
     width: 80%;
     color:whitesmoke;
     text-align: left;
-    margin-top: 10px;
+    margin-top: 0;
     margin-bottom: 0;
 }
 
