--- a/Web_Project/WebApp/Templates/change_password.html
+++ b/Web_Project/WebApp/Templates/change_password.html
@@ -1,5 +1,13 @@
-<form method="post">
-  {% csrf_token %}
-  {{ form }}
-  <button type="submit">Save changes</button>
+<form method="POST">
+{{form.non_field_errors}}
+{% csrf_token %}
+  {% for field in form %}
+    {{field.label_tag}}
+    {{ field }}
+    {{ field.help_text | safe }}
+    {% if field.errors %}
+      {{ field.errors }}
+    {% endif %}
+  {% endfor %}
+<button type="submit">Submit</button>
 </form>
