--- a/Web_Project/WebApp/Templates/Base_UI_WithoutLogIn.html
+++ b/Web_Project/WebApp/Templates/Base_UI_WithoutLogIn.html
@@ -636,7 +636,7 @@
                         <!-- Counter -->
                         <div id="counter">
                             <div class="cell">
-                                <div class="counter-value number-count" data-count="231">1</div>
+                                <div class="counter-value number-count" data-count="{{num}}">1</div>
                                 <div class="counter-info">Người Tiêu Dùng Sản Phẩm</div>
                             </div>
                         </div>
