--- a/Web_Project/WebApp/Templates/change_password.html
+++ b/Web_Project/WebApp/Templates/change_password.html
@@ -1,13 +1,65 @@
-<form method="POST">
-{{form.non_field_errors}}
-{% csrf_token %}
-  {% for field in form %}
-    {{field.label_tag}}
-    {{ field }}
-    {{ field.help_text | safe }}
-    {% if field.errors %}
-      {{ field.errors }}
-    {% endif %}
-  {% endfor %}
-<button type="submit">Submit</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mật khẩu</title>
+
+  <style>
+    .password_container{
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      border: 1px solid grey;
+      transform: translate(-50%, -50%);
+      background-color: transparent;
+      backdrop-filter: blur(3px);
+      padding: 20px 20px;
+      width: 40%;
+      color: aquamarine;
+
+      /* font-style: italic; */
+      font-family: 'Open Sans Condensed';
+
+      -webkit-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+      -moz-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+      box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+    }
+  </style>
+</head>
+
+<body>
+  {% include 'NavigationBar/nav_User_or_Manager.html' %}
+  <form method="POST">
+
+    {{form.non_field_errors}}
+    {% csrf_token %}
+
+    <div class="password_container">
+      {% for field in form %}
+          <div class="row mt-3">
+            <span class="col-6">
+              <strong>
+                {{field.label_tag}}
+              </strong>
+            </span>
+
+            <span class="col-6">
+              {{field}}
+            </span>
+          </div>
+
+          {% if field.errors %}
+            {{ field.errors }}
+          {% endif %}
+
+      {% endfor %}
+
+      <div class="btn">
+        <button type="submit">Submit</button>
+      </div>
+    </div>
+
+  </form>
+</body>
+</html>
